# VLM_SOP

./: .gitignore  AGENTS.md  LICENSE  PARALLEL_SUBAGENT_PROMPTS.md  README.md  THIRD_PARTY_NOTICES.md  start_rtsp.sh  start_vlm_8300.sh
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/: Dockerfile  README.md  pyproject.toml  requirements.txt
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/data/samples/config_to_bcq/: choices.txt  question.txt
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/data/samples/config_to_sequential_mcq/: choices.txt  question.txt
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/data/samples/gqa_to_gqas/: action1.txt  action10.txt  action11.txt  action2.txt  action3.txt  action4.txt  action5.txt  (+4 more)
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/scripts/: run_config_to_bcq.sh  run_config_to_mcq.sh  run_golden_gqa_to_gqa.sh  run_gqa_to_gqas.sh
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/vlm_aug/: config_to_bcq.py  config_to_dynamic_mcq.py  config_to_dynamic_shuffling.py  config_to_extra_negative.py  config_to_sequential_mcq.py  frame_drop.py  golden_gqa_to_gqa.py  gqa_to_gqas.py  spatial_localization.py
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/vlm_aug/cfg/: bcq.py  dmcq.py  ds.py  en.py  gqa.py  llm.py  mcq.py  spatial.py
microservices/sop-training-bp/microservices/data-generation-pipeline/source/multi-modal-autolabel-augmentation-pipeline/vlm_aug/utils/: __init__.py  annotation_template.py  const.py  helper.py  logger.py
(+452 files in other folders)
