######################################################################################################
# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
######################################################################################################


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vlm_aug"
version = "0.0.1"
authors = [
  { name="Leo Liou", email="lliou@nvidia.com" },
]
description = "autolabel_augmenting"
readme = "README.md"
requires-python = ">=3.10"

[tool.hatch.build.targets.sdist]
exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["vlm_aug/"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "E741", "F402", "F823", "E203"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = false
known-first-party = ["nvidia_tao_pytorch"]  # Modify this line for your project

[tool.black]
line-length = 119

[tool.isort]
force-single-line = false
